2007-09-12  Sven Schuetz <sven@de.ibm.com>

	* cimcClientSfcbLocal.c:
	Fixed 1791690: segfault with local call in newCMPIString

2007-09-10  Sven Schuetz <sven@de.ibm.com>

	* objectImpl.h:
	Additional patch for 1685254: added new objectImpl level

2007-09-06  Sven Schuetz <sven@de.ibm.com>

	* brokerUpc.c:
	Fixed 1769471: multiple handlers do not work as expected

2007-09-06  Sven Schuetz <sven@de.ibm.com>

	* cimXmlGen.c, instance.c, instance.h, objectImpl.c, objectImpl.h:
	Fixed 1784913: change filter handling

2007-09-06  Sven Schuetz <sven@de.ibm.com>

	* providerMgr.c:
	Fixed 1770841: one provider for multiple associations problem

2007-08-28  Sven Schuetz <sven@de.ibm.com>

	* cimXmlRequest.c, cimXmlGen.h, cimXmlGen.c:
	Fixed 1780595: xml special chars are not escaped in error description

2007-08-28  Sven Schuetz <sven@de.ibm.com>

	* objectImpl.h, objectImplSwapI32toP32.c, constClass.c,
	classProvider.c, objectImpl.c, classProviderMem.c,
	constClass.h, cimXmlRequest.c, cimXmlGen.c, objectpath.c:
	Fixed 1685254: sfcb does not return REFERENCECLASS in GetClass

2007-08-01  Adrian Schuur

        * cimXmlGen.c, constClass.c, constClass.h:
        Fixed 1764101: segfault in constClass::getPropQualifierAt()

2007-08-01  Tyrel Datwyler <tyreld@us.ibm.com>

   * classProviderGz.c:
   Fixed 1746659: SFCB segfaults when ai commands are issued simultaneously

2007-08-01  Sven Schuetz <sven@de.ibm.com>

        * cimXmlGen.c, objectImpl.c:
        Fixed 1763178: GetClass operation failure

2007-08-01  Sven Schuetz <sven@de.ibm.com>

	* brokerUpc.c:
	Fixed 1754811: sfcb misses refences/referenceNames call in certain
	upcalls

2007-07-10  Sven Schuetz <sven@de.ibm.com>

	* cimXmlParser.c:
	Fixed 1752715: sfcb does not unescape incoming blanks

2007-07-24  Adrian Schuur

	* internalProvider.c:
	Fixed 1759208: internalProvider segfaults when object not found

2007-07-10  Sven Schuetz <sven@de.ibm.com>

	* objectpath.c: